Fix carousel size at tablet, and alignement: start

--- a/src/components/atoms/MediaCard/_MediaCard.module.scss
+++ b/src/components/atoms/MediaCard/_MediaCard.module.scss
@@ -13,7 +13,7 @@
         max-inline-size: $inline_size--lg;
 
         @include respond_to(min, m_screen) {
-            max-inline-size: $inline_size--xxlg;
+            max-inline-size: $inline_size--xlg;
         }
     }
 
